<resources>
    <string name="app_name">Healthio</string>
    <string name="app_version">Healthio 1.0</string>
    <string-array name="filter_options">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDPBPlnQgDu5vDDCGCLOAMAegZNfmuDcPk</string>
    <string name="home">Home</string>
    <string name="run">Run</string>
    <string name="workout">Workout</string>
    <string name="people">People</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_run">Add Run</string>
    <string name="search">Search</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="distance">Distance</string>
    <string name="settings">Settings</string>
    <string name="info">info</string>
    <string name="good_morning">Good Morning</string>
    <string name="userName">Jane Doe</string>
    <string name="bio">Burning some fats</string>
    <string name="account">Account</string>
    <string name="notification">Notification</string>
    <string name="reminders">Reminders</string>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="editprofilepic">editProfilePic</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="duration">Duration</string>
    <string name="average_speed">Average Speed</string>
</resources>
