<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/searchRun"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="always" />

    <item android:id="@+id/sortRunByDate"
        android:title="@string/date"
        app:showAsAction="never" />

    <item android:id="@+id/sortRunByTime"
        android:title="@string/time"
        app:showAsAction="never" />

    <item android:id="@+id/sortRunByDistance"
        android:title="@string/distance"
        app:showAsAction="never" />


    <item android:id="@+id/sortRunByAvgSpeed"
        android:title="@string/average_speed"
        app:showAsAction="never" />
    <item
        android:id="@+id/sortRunByCaloriesBurned"
        android:title="@string/calories_burned"
        app:showAsAction="never" />

</menu>