<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp"
    android:id="@+id/dashboard_marker">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/markerDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:gravity="start"/>

        <TextView
            android:id="@+id/markerDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:gravity="start"/>

        <TextView
            android:id="@+id/markerAvgSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/average_speed"
            android:gravity="start"/>

        <TextView
            android:id="@+id/markerDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:gravity="start"/>

        <TextView
            android:id="@+id/markerCaloriesBurned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calories_burned"
            android:gravity="start"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>