<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_profile2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/editProfilePic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_profile_camera_icon"
        app:layout_constraintBottom_toBottomOf="@id/profilePic"
        app:layout_constraintEnd_toEndOf="@+id/profilePic"
        android:contentDescription="@string/editprofilepic" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilePic">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/editUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/settings"
                    android:src="@drawable/ic_baseline_person_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/profilePic"
                    app:layout_constraintStart_toEndOf="@id/profilePic"
                    app:layout_constraintTop_toTopOf="@+id/profilePic">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="Name"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/userName"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="normal" />


                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#DCDCDC"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/editProfile"/>


            <LinearLayout
                android:id="@+id/editBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/settings"
                    android:src="@drawable/ic_baseline_info_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/profilePic"
                    app:layout_constraintStart_toEndOf="@id/profilePic"
                    app:layout_constraintTop_toTopOf="@+id/profilePic">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="Bio"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/userBio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/bio"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="normal" />


                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#DCDCDC"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/editProfile"/>


            <LinearLayout
                android:id="@+id/editAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/settings"
                    android:src="@drawable/ic_baseline_info_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/profilePic"
                    app:layout_constraintStart_toEndOf="@id/profilePic"
                    app:layout_constraintTop_toTopOf="@+id/profilePic">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/age"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/userAge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="24"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="normal" />


                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#DCDCDC"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/editProfile"/>


            <LinearLayout
                android:id="@+id/editWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/settings"
                    android:src="@drawable/ic_baseline_info_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/profilePic"
                    app:layout_constraintStart_toEndOf="@id/profilePic"
                    app:layout_constraintTop_toTopOf="@+id/profilePic">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/weight"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/userWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="85kg"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="normal" />


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </ScrollView>


    <LinearLayout
        android:id="@+id/editUserNameBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bottom_sheet_bg"
        android:elevation="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/userNameEdit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/userName"
            android:background="@drawable/field_input_bg"
            android:fontFamily="@font/roboto"
            android:inputType="textCapSentences"
            android:textAlignment="center"
            android:textColorHint="#6C6B6B" />

        <Button
            android:id="@+id/saveUserName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/primary_button"
            android:fontFamily="@font/roboto"
            android:text="Save"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/editWeightBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bottom_sheet_bg"
        android:elevation="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/weightEdit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="85kg"
            android:background="@drawable/field_input_bg"
            android:fontFamily="@font/roboto"
            android:inputType="number"
            android:textAlignment="center"
            android:textColorHint="#6C6B6B" />

        <Button
            android:id="@+id/saveWeight"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/primary_button"
            android:fontFamily="@font/roboto"
            android:text="Save"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/editBioBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bottom_sheet_bg"
        android:elevation="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/bioEdit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="Burning some calories"
            android:background="@drawable/field_input_bg"
            android:fontFamily="@font/roboto"
            android:textAlignment="center"
            android:textColorHint="#6C6B6B" />

        <Button
            android:id="@+id/saveBio"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/primary_button"
            android:fontFamily="@font/roboto"
            android:text="Save"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/editAgeBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bottom_sheet_bg"
        android:elevation="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/ageEdit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="24"
            android:background="@drawable/field_input_bg"
            android:fontFamily="@font/roboto"
            android:inputType="number"
            android:textAlignment="center"
            android:textColorHint="#6C6B6B" />

        <Button
            android:id="@+id/saveAge"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/primary_button"
            android:fontFamily="@font/roboto"
            android:text="Save"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>